Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <h1>
-<a name="spring-portlet-example" class="anchor" href="#spring-portlet-example"><span class="octicon octicon-link"></span></a>spring-portlet-example</h1>
+          <p>This repository contains a simple spring portlet. It is intended as a step by step turoria.</p>
         </section>
 
         <footer>
