--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Spring-portlet-example by mir333</title>
+    <title>Spring Portlet Example</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Spring-portlet-example</h1>
+          <h1>Spring Portlet Example</h1>
           <h2></h2>
         </header>
 
